Missing nagivation links added

--- a/about.html
+++ b/about.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        h2, h3{
-            color: rgb(16, 94, 124);
-        }
-        body{
-            background-color: beige;
-        }
-        li{
-            color: green;
-        }
+      h2,
+      h3 {
+        color: rgb(16, 94, 124);
+      }
+      body {
+        background-color: beige;
+      }
+      li {
+        color: green;
+      }
     </style>
-</head>
-<body>
-    <h1 style="text-align: center; color: brown;">Behind the code: Meet Ravin</h1>
+  </head>
+  <body>
+    <h1 style="text-align: center; color: brown">
+      Behind the code: Meet Ravin
+    </h1>
     <h2>My education background:</h2>
-    <pre>         I began my academic journey in Kathmandu, Nepal, where I completed my high
+    <pre>
+         I began my academic journey in Kathmandu, Nepal, where I completed my high
          school education with a strong foundation in mathematics and science. 
          Driven by a passion for technology and innovation, I moved to the United 
          States to further my studies in computer science. I earned both my Bachelor’s
@@ -31,33 +35,49 @@
          software development, data structures, cloud computing, and full-stack 
          application design. My education has not only equipped me with technical 
          skills but also instilled in me a lifelong curiosity and commitment to
-         continuous learning.</pre>
+         continuous learning.</pre
+    >
     <h3>My hobbies:</h3>
     <ul>
-        <li>Traveling</li>
-        <li>Photography</li>
-        <li>Hiking</li>
-        <li>Listening to music</li>
-        <li>Cooking</li>
-        <li>Watching movies and tv shows</li>
+      <li>Traveling</li>
+      <li>Photography</li>
+      <li>Hiking</li>
+      <li>Listening to music</li>
+      <li>Cooking</li>
+      <li>Watching movies and tv shows</li>
     </ul>
     <h3>My top three goals:</h3>
     <ol>
-        <li>AWS Certifications</li>
-        <li>JAVA Certifications</li>
-        <li>To work as a Full Stack Developer</li>
+      <li>AWS Certifications</li>
+      <li>JAVA Certifications</li>
+      <li>To work as a Full Stack Developer</li>
     </ol>
     <h3>My personal quote:</h3>
-    <pre style="font-style: italic;">“Find where the 404 hides — every error is a hidden opportunity.”
-
+    <pre
+      style="font-style: italic"
+    >“Find where the 404 hides — every error is a hidden opportunity.”
     <br>
 <a href="/index.html">Homepage</a>
 <a href="/projects.html">My projects</a>
 </pre>
-<footer style="background-color: #2c2c2c; color: white; padding: 20px 0; text-align: center;">
-  <p>📧 Email: <a href="mailto:ravin.timalsina@example.com" style="color: #90ee90;">ravin.timalsina@example.com</a></p>
-  <p>📍 Address: Dallas, Texas, USA</p>
-  <p style="font-size: 0.9em; color: #cccccc;">&copy; 2025 Ravin Timalsina. All rights reserved.</p>
-</footer>
-</body>
+    <footer
+      style="
+        background-color: #2c2c2c;
+        color: white;
+        padding: 20px 0;
+        text-align: center;
+      "
+    >
+      <p>
+        📧 Email:
+        <a href="mailto:ravin.timalsina@example.com" style="color: #90ee90"
+          >ravin.timalsina@example.com</a
+        >
+      </p>
+      <p>📍 Address: Dallas, Texas, USA</p>
+      <p style="font-size: 0.9em; color: #cccccc">
+        &copy; 2025 Ravin Timalsina. All rights reserved.
+      </p>
+    </footer>
+  </body>
 </html>
