--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome</title>
     <style>
         img{
             height: 10;
@@ -12,12 +12,12 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: beige;">
     <h1 style="text-align: center; color: blueviolet;">Welcome to my portfolio</h1>
     <h3 style="align-items: center;">Ravin Timalsina</h3>
     <h4>Email: Timalsinaravin@gmail.com</h4>
     <h4>Ph_Num: 469*******</h4>
-    <img src="/1000028280.jpg" width="1500" alt="grad pic">
+    <img src="/1000028280.jpg" width="500" alt="grad pic">
     <p> 
         Hello, my name is Ravin Timalsina. I’m from Dallas
         Texas, and I recently earned my master’s degree in
