--- a/Form.html
+++ b/Form.html
@@ -36,7 +36,12 @@
         <button type="reset">Reset</button>
     </form>
     <p>Thank you for your details. I will get back to you as soon as possible.</p>
-    <img src="/360_F_390115184_pC62LQRe5VlME5w1I1XgUxm6TeKMlQ7Q.jpg" width="1500" height="" alt="">
+    <br>
+    <a href="/index.html">Homepage</a>
+    <br>
+    <a href="/about.html">About me</a>
+    <br>
+    <img src="/360_F_390115184_pC62LQRe5VlME5w1I1XgUxm6TeKMlQ7Q.jpg" width="2000" height="500" alt="">
     
 </body>
 <footer style="background-color: #2c2c2c; color: white; padding: 20px 0; text-align: center;">
