--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My projects</title>
 </head>
-<body>
+<body style="background-color: beige;">
     <h1 style="color: brown;">My Projects:</h1>
     <ol>
         <h2>Java projects</h2>
